Rem corrupted file and studyCam change

--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -16,7 +16,7 @@
         <!-- Navbar section -->
         <nav class="navbar">
             <div class="navbar__container">
-                <a href="/" id="navbar__logo"><i class="fas fa-gem"></i>Innovation</a>
+                <a href="/frontendtic" id="navbar__logo"><i class="fas fa-gem"></i>Innovation</a>
                 <div class="navbar__toggle" id="mobile-menu">
                     <span class="bar"></span><span class="bar"></span>
                     <span class="bar"></span>
@@ -26,12 +26,12 @@
                         <a href="{{ url_for('tech') }}" class="navbar__links">Patient</a>
                     </li>
                     <li class="navbar__item">
-                        <a href="/" class="navbar__links">Study</a>
+                        <a href="/frontendtic" class="navbar__links">Study</a>
                     </li>
                     <li class="navbar__item">
-                        <a href="/" class="navbar__links">Sandbox</a>
+                        <a href="/frontendtic" class="navbar__links">Sandbox</a>
                     </li>
-                    <li class="navbar__btn"><a href="/" class="button">Demo</a></li>
+                    <li class="navbar__btn"><a href="/frontendtic" class="button">Demo</a></li>
                 </ul>
             </div>
         </nav>
@@ -72,57 +72,57 @@
                 <div class="footer__link--wrapper">
                     <div class="footer__link--items">
                         <h2>About Us</h2>
-                        <a href="/">How it works</a>
-                        <a href="/">Testimonials</a>
-                        <a href="/">Careers</a>
-                        <a href="/">Investments</a>
-                        <a href="/">Terms of Services</a>
+                        <a href="/frontendtic">How it works</a>
+                        <a href="/frontendtic">Testimonials</a>
+                        <a href="/frontendtic">Careers</a>
+                        <a href="/frontendtic">Investments</a>
+                        <a href="/frontendtic">Terms of Services</a>
                     </div>
                     <div class="footer__link--items">
                         <h2>Contact Us</h2>
-                        <a href="/">How it works</a>
-                        <a href="/">Testimonials</a>
-                        <a href="/">Careers</a>
-                        <a href="/">Investments</a>
-                        <a href="/">Terms of Services</a>
+                        <a href="/frontendtic">How it works</a>
+                        <a href="/frontendtic">Testimonials</a>
+                        <a href="/frontendtic">Careers</a>
+                        <a href="/frontendtic">Investments</a>
+                        <a href="/frontendtic">Terms of Services</a>
                     </div>
                 </div>
                 <div class="footer__link--wrapper">
                     <div class="footer__link--items">
                         <h2>Videos</h2>
-                        <a href="/">How it works</a>
-                        <a href="/">Testimonials</a>
-                        <a href="/">Careers</a>
-                        <a href="/">Investments</a>
-                        <a href="/">Terms of Services</a>
+                        <a href="/frontendtic">How it works</a>
+                        <a href="/frontendtic">Testimonials</a>
+                        <a href="/frontendtic">Careers</a>
+                        <a href="/frontendtic">Investments</a>
+                        <a href="/frontendtic">Terms of Services</a>
                     </div>
                     <div class="footer__link--items">
                         <h2>Social Media</h2>
-                        <a href="/">How it works</a>
-                        <a href="/">Testimonials</a>
-                        <a href="/">Careers</a>
-                        <a href="/">Investments</a>
-                        <a href="/">Terms of Services</a>
+                        <a href="/frontendtic">How it works</a>
+                        <a href="/frontendtic">Testimonials</a>
+                        <a href="/frontendtic">Careers</a>
+                        <a href="/frontendtic">Investments</a>
+                        <a href="/frontendtic">Terms of Services</a>
                     </div>
                 </div>
             </div>
             <div class="social__media">
                 <div class="social__media--wrap">
                     <div class="footer__logo">
-                        <a href="/" id="footer__logo"><i class="fas fa-gem"></i>Upright</a>
+                        <a href="/frontendtic" id="footer__logo"><i class="fas fa-gem"></i>Upright</a>
                     </div>
                     <p class="website__right"> ©NEXT 2020. All rights reserved</p>
                     <div class="social__icons">
-                        <a href="/" class="social__icon--link" target="_blank">
+                        <a href="/frontendtic" class="social__icon--link" target="_blank">
                             <i class="fab fa-facebook"></i>
                         </a>
-                        <a href="/" class="social__icon--link" target="_blank">
+                        <a href="/frontendtic" class="social__icon--link" target="_blank">
                             <i class="fab fa-instagram"></i>
                         </a>
-                        <a href="/" class="social__icon--link" target="_blank">
+                        <a href="/frontendtic" class="social__icon--link" target="_blank">
                             <i class="fab fa-twitter"></i>
                         </a>
-                        <a href="/" class="social__icon--link" target="_blank">
+                        <a href="/frontendtic" class="social__icon--link" target="_blank">
                             <i class="fab fa-linkedin"></i>
                         </a>
                     </div>
