--- a/frontend/templates/tech.html
+++ b/frontend/templates/tech.html
@@ -16,22 +16,22 @@
         <!-- Navbar section -->
         <nav class="navbar">
             <div class="navbar__container">
-                <a href="/" id="navbar__logo"><i class="fas fa-gem"></i>Second Page </a>
+                <a href="/frontendtic" id="navbar__logo"><i class="fas fa-gem"></i>Second Page </a>
                 <div class="navbar__toggle" id="mobile-menu">
                     <span class="bar"></span><span class="bar"></span>
                     <span class="bar"></span>
                 </div>
                 <ul class="navbar__menu">
                     <li class="navbar__item">
-                        <a href="/" class="navbar__links">Patient</a>
+                        <a href="/frontendtic" class="navbar__links">Patient</a>
                     </li>
                     <li class="navbar__item">
-                        <a href="/" class="navbar__links">Study</a>
+                        <a href="/frontendtic" class="navbar__links">Study</a>
                     </li>
                     <li class="navbar__item">
-                        <a href="/" class="navbar__links">Sandbox</a>
+                        <a href="/frontendtic" class="navbar__links">Sandbox</a>
                     </li>
-                    <li class="navbar__btn"><a href="/" class="button">Home</a></li>
+                    <li class="navbar__btn"><a href="/frontendtic" class="button">Home</a></li>
                 </ul>
             </div>
         </nav>
@@ -78,20 +78,20 @@
             <div class="social__media">
                 <div class="social__media--wrap">
                     <div class="footer__logo">
-                        <a href="/" id="footer__logo"><i class="fas fa-gem"></i>Upright</a>
+                        <a href="/frontendtic" id="footer__logo"><i class="fas fa-gem"></i>Upright</a>
                     </div>
                     <p class="website__right">NEXT 2020. All rights reserved</p>
                     <div class="social__icons">
-                        <a href="/" class="social__icon--link" target="_blank">
+                        <a href="/frontendtic" class="social__icon--link" target="_blank">
                             <i class="fab fa-facebook"></i>
                         </a>
-                        <a href="/" class="social__icon--link" target="_blank">
+                        <a href="/frontendtic" class="social__icon--link" target="_blank">
                             <i class="fab fa-instagram"></i>
                         </a>
-                        <a href="/" class="social__icon--link" target="_blank">
+                        <a href="/frontendtic" class="social__icon--link" target="_blank">
                             <i class="fab fa-twitter"></i>
                         </a>
-                        <a href="/" class="social__icon--link" target="_blank">
+                        <a href="/frontendtic" class="social__icon--link" target="_blank">
                             <i class="fab fa-linkedin"></i>
                         </a>
                     </div>
