--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -14,7 +14,7 @@
     <!-- Navbar section -->
     <nav class="navbar">
         <div class="navbar__container">
-            <a href="/" id="navbar__logo"><i class="fas fa-gem"></i>Upright</a>
+            <a href="/srctic" id="navbar__logo"><i class="fas fa-gem"></i>Upright</a>
             <div class="navbar__toggle" id="mobile-menu">
                 <span class="bar"></span><span class="bar"></span>
                 <span class="bar"></span>
