--- a/src/templates/study.html
+++ b/src/templates/study.html
@@ -15,7 +15,7 @@
         <!-- Navbar section -->
         <nav class="navbar">
             <div class="navbar__container">
-                <a href="/" id="navbar__logo"><i class="fas fa-gem"></i>Upright </a>
+                <a href="/srctic" id="navbar__logo"><i class="fas fa-gem"></i>Upright </a>
                 <div class="navbar__toggle" id="mobile-menu">
                     <span class="bar"></span><span class="bar"></span>
                     <span class="bar"></span>
@@ -95,20 +95,20 @@
             <div class="social__media">
                 <div class="social__media--wrap">
                     <div class="footer__logo">
-                        <a href="/" id="footer__logo"><i class="fas fa-gem"></i>Upright</a>
+                        <a href="/srctic" id="footer__logo"><i class="fas fa-gem"></i>Upright</a>
                     </div>
                     <p class="website__right">NEXT 2020. All rights reserved</p>
                     <div class="social__icons">
-                        <a href="/" class="social__icon--link" target="_blank">
+                        <a href="/srctic" class="social__icon--link" target="_blank">
                             <i class="fab fa-facebook"></i>
                         </a>
-                        <a href="/" class="social__icon--link" target="_blank">
+                        <a href="/srctic" class="social__icon--link" target="_blank">
                             <i class="fab fa-instagram"></i>
                         </a>
-                        <a href="/" class="social__icon--link" target="_blank">
+                        <a href="/srctic" class="social__icon--link" target="_blank">
                             <i class="fab fa-twitter"></i>
                         </a>
-                        <a href="/" class="social__icon--link" target="_blank">
+                        <a href="/srctic" class="social__icon--link" target="_blank">
                             <i class="fab fa-linkedin"></i>
                         </a>
                     </div>
